# graphrag-gencv

./: .gitignore  README.md  cv_to_rdf.py  cv_to_rdf_old.py  dockerfile  esco_service.py  generate_cv.py  generate_rdf.py  graphrag_Anirudh_Maiya.tex  hybrid_search.py  ingestion_service.py  llm_service.py  main.py  pdf_extractor.py  pdf_service.py  pyproject.toml  query_graph.py  settings.py  vector_service.py
designs/: texDesign.py  texDesign1.py  texDesign2.py  texDesign3.py  texDesign4.py  texDesignxx.py
finetuning/: dataset_builder.py  finetune_data.jsonl  split_finetune_dataset.py  test_mapping.py  validate_finetune_dataset.py
frontend/: package-lock.json
frontend/src/app/: page.tsx
pdf-extractor/: extractor.py
tests/: baseline_01_Kenneth_Plum_Toft.tex  baseline_Andrew_Qiao.tex  baseline_Anirudh_Maiya.tex  baseline_Caitlin_Chiang.tex  baseline_Miguel_Osuna.tex  baseline_Paul_Patena.tex  baseline_Sami_Alharbi.tex  baseline_Yi_Zhen.tex  baseline_Yu_Shi.tex  graphrag_01_Kenneth_Plum_Toft.tex  graphrag_Alex_J._Mercer.tex  graphrag_Andrew_Qiao.tex  graphrag_Anirudh_Maiya.tex  graphrag_Caitlin_Chiang.tex  graphrag_Dr._Elias_J._Thorne.tex  graphrag_Miguel_Osuna.tex  graphrag_Paul_Michael_Patena.tex  graphrag_SAMI_ALHARBI.tex  graphrag_Yi_Zhen.tex  graphrag_Yu_Shi.tex
