[project]
name = "graphrag-gencv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "docling==2.73.0",
    "docling-core==2.64.0",
    "docling-ibm-models==3.11.0",
    "docling-parse==4.7.3",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "loguru>=0.7.3",
    "marker-pdf>=1.10.2",
    "openai>=1.109.1",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.26",
    "rdflib>=7.6.0",
    "sparqlwrapper>=2.0.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.ruff]
lint.select = ["I"]
